# 10GigE

./: .gitignore  .readthedocs.yaml
shr_backend/: .gitignore  CMakeLists.txt  README.md
shr_backend/camera/: CameraWorker.cpp  CameraWorker.h
shr_backend/gnss/: GnssRecord.h  NmeaReader.cpp  NmeaReader.h
shr_backend/scripts/: 00_install_vimba.sh  01_setup_nuc.sh  02_build.sh  03_deploy.sh  04_test_stage1.sh  05_gnss_sim.sh
shr_backend/server/: BackendServer.cpp  BackendServer.h
shr_backend/src/: main.cpp
shr_backend/storage/: SidecarWriter.cpp  SidecarWriter.h
shr_backend/systemd/: shr-backend.service
shr_backend/transform/: ImageTransform.cpp  ImageTransform.h
shr_backend/trigger/: TriggerServer.cpp  TriggerServer.h
source/: android_backend_client.rst  android_qml_ui.rst  android_setup.rst  api_reference.rst  arch_backend_server.rst  arch_overview.rst  arch_usb_network.rst  async_acquisition.rst  building_and_running.rst  camera_discovery.rst  conf.py  dev_x86_setup.rst  feature_configuration.rst  full_application.rst  git_rtd.rst  gnss_architecture.rst  gnss_frame_tagging.rst  gnss_full_implementation.rst  gnss_intro.rst  gnss_nmea_primer.rst  gnss_qt_ui.rst  gnss_rs232_v3000.rst  gnss_serial_reader.rst  gnss_sidecar_file.rst  hardware_setup.rst  image_transformation.rst  index.rst  intro.rst  laptop_setup.rst  links.rst  nuc_setup.rst  os_hardening.rst  platform_intro.rst  platform_qt_role.rst  platform_streaming.rst  platform_v3000_specs.rst  platform_vs_r8000.rst  project_setup.rst  qt_ui_layout.rst  saving_frames.rst  (+15 more)
source/_static/: SHR_Capture_App.cpp  custom.css
